Add secretsdb helper

--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -1,7 +1,13 @@
 <div>
     <h2>All secrets</h2>
     {{#each secrets as |secret|}}
-    <p>{{secret.createdAt}} by {{secret.author}}</p>
+    <p>{{secret.createdAt}} by {{secret.author.email}}</p>
+    {{#if secret.isAuthorized}}
     <p>{{secret.text}}</p>
-    {{/each}}
+    {{else}}
+    <form method="post" action="/secrets/request">
+        <input type="hidden" value="{{secret._id}}" name="secretId">
+        <button type="submit">Request Authorization</button>
+    </form>
+    {{/if}} {{/each}}
 </div>
